@@ -1,4 +1,15 @@
-Tue Mar 18 20:41:14 UTC 2008   Yan Dai  <dai_y@ociweb.com> 
+Wed Mar 19 18:59:24 UTC 2008  Mike Martinez  <martinez_m@ociweb.com>
+
+        * dds/InfoRepo/Federator.idl:
+        * dds/InfoRepo/FederatorManager.h:
+        * dds/InfoRepo/FederatorManager.cpp:
+	  Simplified join_federation() signature and added federationId()
+	  accessor.
+
+        * docs/design/federation.txt:
+	  Updated with Use Cases and Scenarios.
+
+Tue Mar 18 20:41:14 UTC 2008   Yan Dai  <dai_y@ociweb.com>
 
         * DevGuideExamples/DCPS/Messenger/DataReaderListener.cpp:
 
